Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberObject.quorum
class Main
    action Main
        number v = Test()
    end

    action Test() returns number
        Object var
        return var
    end
end